# cpp-primos

./: .gitignore  CMakeLists.txt  Makefile  autoexec.lua  benchmark.cpp  main.cpp  middle.cpp  run.sh
.cache/clangd/index/: benchmark.cpp.884B5FB9E59CFC6C.idx
